--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -12,8 +12,8 @@
           BIND DLZ on Rails
       - if current_user
       #search-bar{:style => "display: inline; float: right;"}
-        - form_for( :search, :url => { :controller => :search, :action => :results }, :html => { :method => :get } ) do |f|
-          = f.text_field :parameter
+        - form_tag( { :controller => :search, :action => :results }, { :method => :get } ) do |f|
+          = text_field_tag :q
           = submit_tag "Search"
       #Nav
         %ul
