Scoped will_paginate to solve some issues

--- a/app/views/search/results.html.haml
+++ b/app/views/search/results.html.haml
@@ -4,6 +4,7 @@
 - if @results.empty?
   %strong No zones found
 - else
-  = render :partial => '/zones/zone', :collection => @results
+  %table
+    = render :partial => '/zones/zone', :collection => @results
 
   = will_paginate @results
