--- a/app/views/zones/_record.html.haml
+++ b/app/views/zones/_record.html.haml
@@ -16,7 +16,7 @@
     = record.priority
   %td
     = record.data
-  %td
+  %td{ :width => 36 }
     = link_to_function prototip_info_icon('database_edit.png', "record-template-edit-#{record.id}"), "editRecord(#{record.id}, '#{record.type.downcase}')"
     = link_to prototip_info_icon('database_delete.png', "record-template-delete-#{record.id}"), zone_record_path( record.zone, record ), :method => :delete, :confirm => "Are you sure?"
 
@@ -34,6 +34,6 @@
           - else
             %td= record.priority
           %td= f.text_field :data, :size => 15
-          %td
+          %td{ :width => 39 }
             = image_submit_tag "table_save.png", { :class => 'nb' }
             = link_to_function image_tag("cancel.png"), "hideRecord(#{record.id}, '#{record.type.downcase}')"
