--- a/app/views/templates/_zone_template.html.haml
+++ b/app/views/templates/_zone_template.html.haml
@@ -3,4 +3,5 @@
   %td
     = link_to prototip_info_icon('table_edit.png', 'edit-template'), edit_zone_template_path( zone_template )
     = link_to prototip_info_icon('table_delete.png', 'delete-template'), zone_template_path( zone_template ), :method => :delete, :confirm => 'Are you sure you want to remove this template?'
-    
+    - unless zone_template.has_soa?
+      = prototip_info_icon('table_error.png', 'missing-soa')
