Aesthetic tweaks to zone editing as well

--- a/app/views/zones/show.html.haml
+++ b/app/views/zones/show.html.haml
@@ -112,7 +112,7 @@
 
 #domain-records.padded
   %h2.underline Zone records
-  %table.grid#record-table
+  %table.gridwide#record-table
     %tr
       %td.small Hostname
       %td.small TTL
