--- a/app/views/zones/_record.html.haml
+++ b/app/views/zones/_record.html.haml
@@ -6,17 +6,12 @@
 
 %tr[ record, :marker ]
 %tr[ record, :show ]
-  %td
-    = record.host
-  %td
-    = record.ttl
-  %td
-    = record.type
-  %td
-    = record.priority
-  %td
-    = record.data
-  %td{ :width => 36 }
+  %td{ :width => 250 }= record.host
+  %td{ :width => 50 }= record.ttl
+  %td{ :width => 30 }= record.type
+  %td{ :width => 30 }= record.priority
+  %td{ :width => 250 }= record.data
+  %td{ :width => 39 }
     = link_to_function prototip_info_icon('database_edit.png', "record-template-edit-#{record.id}"), "editRecord(#{record.id}, '#{record.type.downcase}')"
     = link_to prototip_info_icon('database_delete.png', "record-template-delete-#{record.id}"), zone_record_path( record.zone, record ), :method => :delete, :confirm => "Are you sure?"
 
@@ -26,14 +21,15 @@
       %div[ record, :error ]
       %table.gridwide
         %tr
-          %td= f.text_field :host, :size => 2
-          %td= f.text_field :ttl, :size => 3
-          %td= record.type
-          - if record.type.downcase == 'mx'
-            %td= f.text_field :priority, :size => 2
-          - else
-            %td= record.priority
-          %td= f.text_field :data, :size => 15
+          %td{ :width => 250 }= f.text_field :host, :size => 15
+          %td{ :width => 50 }= f.text_field :ttl, :size => 3
+          %td{ :width => 30 }= record.type
+          %td{ :width => 30 }
+            - if record.is_a?( MX )
+              = f.text_field :priority, :size => 2
+            - else
+              &nbsp;
+          %td{ :width => 250 }= f.text_field :data, :size => 15
           %td{ :width => 39 }
             = image_submit_tag "table_save.png", { :class => 'nb' }
             = link_to_function image_tag("cancel.png"), "hideRecord(#{record.id}, '#{record.type.downcase}')"
