Fixed a few nagging errors. A user won't be able to delete himself/herself. A few routing errors when you delete zone and record templates.

--- a/app/views/users/_user.html.haml
+++ b/app/views/users/_user.html.haml
@@ -26,7 +26,7 @@
   %td
     = link_to prototip_info_icon('user_edit.png', "edit-user-#{user.id}"), edit_user_path( user )
     - unless user.suspended?
-      = link_to prototip_info_icon('user_suspend.png', "suspend-user-#{user.id}"), suspend_user_path( user ), :method => :put
+      = link_to prototip_info_icon('user_suspend.png', "suspend-user-#{user.id}"), suspend_user_path( user ), :method => :put unless user.eql?(current_user)
     - else
       = link_to prototip_info_icon('user_go.png', "reactivate-user-#{user.id}"), unsuspend_user_path( user ), :method => :put
-    = link_to prototip_info_icon('user_delete.png', "delete-user-#{user.id}"), purge_user_path( user ), :method => :delete unless user.admin?
+    = link_to prototip_info_icon('user_delete.png', "delete-user-#{user.id}"), purge_user_path( user ), :method => :delete unless user.eql?(current_user)
