More info tweaks

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -51,6 +51,13 @@
             <a href="http://www.opensourcery.co.za">Open Sourcery</a>
             </p>
           </div>
+          <div class="item">
+            <!-- Docs -->
+            <h4>Documentation Bits</h4>
+            <p><a href="http://github.com/kennethkalmer/powerdns-on-rails/wikis">Wiki</a><br />
+            <a href="http://www.opensourcery.co.za/tag/powerdns/">Blog entries</a>
+            </p>
+          </div>
         </div>
       </div>
       <div id="footer">
