--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -58,6 +58,11 @@
             <a href="http://www.opensourcery.co.za/tag/powerdns/">Blog entries</a>
             </p>
           </div>
+          <div class="item">
+            <!-- metrics -->
+            <h4><a href="http://www.ohloh.net/p/powerdns-on-rails">Metrics</a></h4>
+            <script type="text/javascript" src="http://www.ohloh.net/p/15757/widgets/project_partner_badge.js"></script>
+          </div>
         </div>
       </div>
       <div id="footer">
