rails 3 output syntax for form_for

--- a/app/views/domains/edit.html.haml
+++ b/app/views/domains/edit.html.haml
@@ -7,7 +7,7 @@
   #help-master=t :help_domain_master
   #help-ttl=t :help_ttl
 
-- form_for(@domain) do |f|
+= form_for(@domain) do |f|
   = error_messages_for :domain
   %p &nbsp;
   %table.grid
