--- a/app/views/users/_form.html.haml
+++ b/app/views/users/_form.html.haml
@@ -3,7 +3,7 @@
   #domain-owner= t :help_user_is_user
   #token-user-help= t :help_user_token_info
 
-- form_for( @user ) do |f|
+= form_for( @user ) do |f|
   = error_messages_for( :user )
 
   %table
