Remove unneeded and error-prone javascript libs

--- a/app/assets/javascripts/application.js.erb
+++ b/app/assets/javascripts/application.js.erb
@@ -1,66 +1,7 @@
 // Place your application-specific JavaScript functions and classes here
 // This file is automatically included by javascript_include_tag :defaults
-//= require jquery
+//= require jquery.min
 //= require jquery_ujs
 //= require humane
-//= require jquery.min
 //= require jquery.tipTip
-//= require prototip
-//= require_tree .
-
-
-$(document).ready(function() {
-  // AJAX activity indicator
-  $('body').append('<div id="ajaxBusy"><img src="<%=asset_path("loading.gif")%>> Processing</div>');
-
-  // Setup tooltips where required
-  $('.help-icn').each(function(i, icon){
-    $(icon).tipTip({
-      content: $( "#" + $(icon).data("help") ).text()
-    });
-  });
-
-  // Used by the new record form
-  $('#record-form #record_type').change(function() {
-    toggleRecordFields( $(this).val() );
-  });
-
-  // Used by the new domain form
-  $('#domain_type').change(function() {
-    if ( $(this).val() == 'SLAVE' ) {
-      $('#master-address').show();
-      $('#zone-templates').hide();
-      $('#no-template-input').hide();
-    } else {
-      $('#master-address').hide();
-      $('#zone-templates').show();
-      $('#no-template-input').show();
-    }
-  });
-
-  // Used by the new domain form
-  $('#domain_zone_template_id').change(function() {
-    if ( $(this).val() == '' ) {
-      $('#no-template-input').show();
-    } else {
-      $('#no-template-input').hide();
-    }
-  });
-
-  // Used by the new record template form
-  $('#record-form #record_template_record_type').change(function() {
-    toggleRecordFields( $(this).val() );
-  });
-
-  // Used by the new macro step form
-  $('#record-form #macro_step_record_type').change(function() {
-    toggleRecordFields( $(this).val() );
-  });
-});
-
-// Ajax activity indicator bound to ajax start/stop document events
-$(document).ajaxStart(function(){ 
-  $('#ajaxBusy').show(); 
-}).ajaxStop(function(){ 
-  $('#ajaxBusy').hide();
-});
+//= require my_scripts
