--- a/public/stylesheets/application.css
+++ b/public/stylesheets/application.css
@@ -5,6 +5,8 @@ body {
     font-size: 12px;
     color: #000;
     background-color: #F0F0F0;
+    width: 100%;
+    height: 100%;
 }
 #Container {
     width: 800px;
@@ -12,9 +14,7 @@ body {
     padding-top:20px;
 }
 
-
 #Nav {
-
     height: 30px;
     background-image: url(../images/top-background.png);
     background-repeat: repeat-x;
@@ -25,7 +25,6 @@ body {
     border-top-right-radius: 10px;
     -moz-border-radius-topleft: 10px;
     border-top-left-radius: 10px;
-    
 }
 
 #Nav ul {
@@ -35,8 +34,7 @@ body {
 }
 #Nav ul li {
     display: inline;
-    padding-right: 5px;
-
+    padding-right: 10px;
 }
 
 
@@ -59,8 +57,60 @@ body {
     text-decoration: none;
 }
 #Nav a:hover {
-    text-decoration: underline;
+    color: #1388d6;
 }
+
+
+#header {
+    height: 30px;
+    width:800px;
+    background-color: #1388d6;
+    margin-left: -20px;
+
+    color: #FFF;
+    font-weight: bold;
+    text-decoration: none;
+    text-align:left;
+    overflow:auto;
+    margin-top:-20px;
+}
+
+#header.leftwrapper {
+    margin-top: -20px;
+}
+
+#header.rightwrapper {
+    width:400px;
+    margin-top:-50px;
+    margin-bottom: 12px;
+}
+
+#header.upper.left {
+    width:400px;
+
+}
+
+#header.lower {
+    margin-top:0;
+}
+
+#domain-name{
+    display:inline-block;
+    position: absolute;
+    width: 380px;
+}
+
+#domain-soa{
+    display:inline-block;
+    margin-left: 400px;  
+    position: relative;
+    width:380px;
+}
+
+#soa {
+    margin-top:-5px;
+}
+
 #Body {
     padding: 20px;
     background-color: #FFF;
