Added lower table header styling

--- a/app/views/domains/show.html.haml
+++ b/app/views/domains/show.html.haml
@@ -108,6 +108,7 @@
   #header.lower
     = t :title_domian_rrs
   %table.gridwide#record-table
+    #Nav.small
     %tr
       %td.small= t :label_domain_record_host
       %td.small= t :label_domain_record_ttl
